# AlpineLinux

./: .gitignore  CHANGELOG.md.j2  README.md  build.py  build.sh  packages.txt  pyproject.toml
.github/workflows/: build.yaml  gh-release.yaml  rebuild.yaml  release.yaml
kindos/: __init__.py  build.py  colors.py  container.py  jinja2.py  shell.py  size.py  update_changelog.py
