[project]
name = "KindOS"
version = "0.0.1"
description = "The Developers Friendly Open Source Workspace"
authors = [
    {name = "João Pinto", email = "lamego.pinto@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm.scripts]
build = "python -m kindos.build"

