[project]
name = "KindOS"
version = "0.0.1"
description = "The Developers Friendly Open Source Workspace"
authors = [
    {name = "João Pinto", email = "lamego.pinto@gmail.com"},
]
dependencies = [
    "black>=23.7.0",
    "pre-commit>=3.3.3",
    "jinja2>=3.1.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
black = "black ."
update-changelog = "python -m kindos.update_changelog"
build = "python -m kindos.build"
shell = "python -m kindos.shell"
